# cargo-parse

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  prospector.yaml  pyproject.toml  tox.ini
.github/workflows/: static_check.yml  test.yaml  unit_test.yml
cargo_parse/: __init__.py  parse.py  util.py
cargo_parse/models/: badges.py  cargo_toml.py  core.py  dependency.py  features.py  lib.py  manifest.py  package.py  patch.py  profile.py  workspace.py
doc/: changelog.md  conf.py  index.md
examples/: enforce_branch.py
tests/: test_cargo_parse.py
tests/fixtures/: cargo_manifest.json
tests/resources/: Cargo.toml
