[tool.poetry]
name = "cargo-parse"
version = "0.1.0"
description = "Library to parse the Cargo.toml manifest file."
authors = ["Andrew Hoetker <andrew.hoetker@thinkdeca.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
devtools = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
