[tool.poetry]
name = "cargo-parse"
version = "0.1.0"
description = "Library to parse the Cargo.toml manifest file."
authors = ["Andrew Hoetker <andrew.hoetker@thinkdeca.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Deca-Technologies/cargo-parse"
repository = "https://github.com/Deca-Technologies/cargo-parse"
keywords = ["cargo", "rust"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
devtools = "^0.8.0"
black = "^21.9b0"
isort = { version = "^5.9.3", extras = ["pyproject"] }
pre-commit = "^2.15.0"
prospector = "^1.5.1"
tox = "^3.24.4"
coverage = "^6.0.2"
pytest-cov = "^3.0.0"
xdoctest = "^0.15.10"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme", "m2r"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
per-file-ignores = "__init__.py:F401"

[tool.isort]
known_first_party = 'cargo_parse'
known_third_party = ["pytest"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov-report=term-missing:skip-covered",
    "--cov=cargo_parse",
    "--durations=5",
    "--ignore=acceptance_test",
    "--xdoctest"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{37,38,39}

[testenv]
setenv =
    py{37,38,39}: COVERAGE_FILE = .coverage.{envname}
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest {posargs}

[testenv:report]
skip_install = true
deps = coverage
commands =
    coverage combine
    coverage html
    coverage report --fail-under=90
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
